// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin default parameters with few blobs:defaultParametersFewBlobs 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/libre-franklin/libre-franklin-v2-latin-400.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-300.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-700.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin default parameters with few files: defaultParametersFewFiles 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/rubik/rubik-v7-latin-300.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin default parameters with one blob: defaultParametersOneBlob 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/libre-franklin/libre-franklin-v2-latin-400.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-300.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-700.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin few blobs with asset specific buildOptions overriding generic buildOptions: fewBlobsWithAssetBuildOptions 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"public/deploy/libre-franklin/assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\" integrity=\\"sha384-Mud/18g/t6K/J7IibZYJOkdCdaTgvAjHHeqEJJvnlu9jOdDe+Stc1XxHxH3cO5eq\\" crossorigin=\\"anonymous\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-300.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-400.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-500.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-700.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin one blob with asset specific option outputDir: oneBlobWithAssetOptionOutputDir 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"bust-cache-asset/font/libre-franklin/libre-franklin-v2-latin-400.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-300.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-400.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-500.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-700.woff2\\" as=\\"font\\" rel=\\"preload\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = development End2End Snapshot index.html: AddAssetIndexPlugin one blob with generic buildOptions: oneBlobWithGenericBuildOptions 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"public/deploy/assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\" as=\\"font\\" rel=\\"preload\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin default parameters with few blobs:defaultParametersFewBlobs 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin default parameters with few files: defaultParametersFewFiles 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin default parameters with one blob: defaultParametersOneBlob 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\"><link href=\\"assets/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin few blobs with asset specific buildOptions overriding generic buildOptions: fewBlobsWithAssetBuildOptions 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"public/deploy/libre-franklin/assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\" integrity=\\"sha384-Mud/18g/t6K/J7IibZYJOkdCdaTgvAjHHeqEJJvnlu9jOdDe+Stc1XxHxH3cO5eq\\" crossorigin=\\"anonymous\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"><link href=\\"public/deploy/rubik/assets/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\" as=\\"font\\" rel=\\"preload\\" network=\\"global\\" speed=\\"super-fast\\"></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin one blob with asset specific option outputDir: oneBlobWithAssetOptionOutputDir 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"bust-cache-asset/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"bust-cache-asset/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\" as=\\"font\\" rel=\\"preload\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;

exports[`Test suite for e2e webpack config with AddAssetIndexPlugin. Webpack mode = production End2End Snapshot index.html: AddAssetIndexPlugin one blob with generic buildOptions: oneBlobWithGenericBuildOptions 1`] = `
"<!doctype html>
<html lang=\\"fr\\">

<head>
    <meta charset=\\"utf-8\\">
    <title>IFA</title>
    <base href=\\"/\\">

    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, user-scalable=no\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"favicon.ico\\">


<link href=\\"public/deploy/assets/font/libre-franklin/libre-franklin-v2-latin-400.8d503c823a91e889c0e7.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-300.eb02199844b4e2a0871c.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-400.1ecc21093d3c8aa44b3e.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-500.d3fd715f234b8dcdd09d.woff2\\" as=\\"font\\" rel=\\"preload\\"><link href=\\"public/deploy/assets/font/rubik/rubik-v7-latin-700.9aff6f99df5790ad5dbd.woff2\\" as=\\"font\\" rel=\\"preload\\"></head>

<body>
    <app-root class=\\"mt mat-typography\\"></app-root>
<script type=\\"text/javascript\\" src=\\"index_bundle.js\\"></script></body>

</html>
"
`;
